				Newerth's Savage XR "Battle for Newerth"
		Unofficial Flatpak Bootstrap (installer/update/runner).
								By C.I.A.
							Flathub.org version.
								
#
# -----------------------------------------------------------------------------
#
Version:	0.7.0
Date:		2018-08-28

Enhancements:
	* Implemented changes requested by Flathub.
		* Used shared modules for libGLU and SDL1.2
		* Tied up Manifest file.
		* Changed download of Savage XR installed to Flatpak install stage (via extra-data section in Manifest), updated bootstrapsavagexr.sh to reflect this.
		* Removed nano text editor (I thought it would be usefful for editing savage config files)


#
# -----------------------------------------------------------------------------
#
Version:	0.6.0
Date:		2018-08-27

Initial import into Github from Gitlab, specifically:
	* https://gitlab.com/sea-eye-aya/unofficial-savage-xr-flatpak/tree/Version-0-6-0

Changes from Gitlab:
	* Changed application icon to that of an official Newerth Savage XR one (much better!)
	* Modification of cflags & cppflags to be generic rather than CPU specific (removal of -march=native basically)
	* Removed README.md & makefile.
	* Added appdata.xml which is the basic description displayed on Flathub.org and in the Software Centre.

Enhancements:
	* Textual changes to README.md.
	* Removal of un-needed multiarch switch from the Manifest
	