@@ -11,19 +11,10 @@
 		"--share=network",
 		"--share=ipc",
 		"--device=dri",
-		"--socket=pulseaudio"
+		"--socket=pulseaudio",
+		"--persist=.savage"
 	],
 	"modules": [
-		{
-			"name": "wget",
-			"sources": [
-				{
-					"type": "archive",
-					"url": "http://ftpmirror.gnu.org/wget/wget-1.19.tar.gz",
-					"sha256": "dd9523039845f69e8e945e9f2d5a38af6b1e29efa6ff53830507310235ddade8"
-				}
-			]
-		},
 		{
 			"name": "harfbuzz",
 			"config-opts": [
