@@ -12,9 +12,10 @@ Date:		2018-08-28
 Enhancements:
 	* Implemented changes requested by Flathub.
 		* Used shared modules for libGLU and SDL1.2
-		* Tied up Manifest file.
+		* Tidied up Manifest file.
 		* Changed download of Savage XR installed to Flatpak install stage (via extra-data section in Manifest), updated bootstrapsavagexr.sh to reflect this.
 		* Removed nano text editor (I thought it would be usefful for editing savage config files)
+		* .savage directly is now preserved via the --persist switch in  the Manifest.
 
 
 #
